--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/jopt-simple-4.7.jar"/>
+	<classpathentry kind="lib" path="/Users/rishabhmehrotra/Downloads/mallet-2.0.7 2/dist/mallet-deps.jar"/>
+	<classpathentry kind="lib" path="/Users/rishabhmehrotra/Downloads/mallet-2.0.7 2/dist/mallet.jar"/>
 	<classpathentry kind="lib" path="lib/mallet-2.0.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
